--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="tema2.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_1_foto1.JPG" alt="">
+                        <img src="fotos/temax/tema_2_foto.jpg" alt="">
                     </div>
                     <p>Tema 2</p>
                 </div>
@@ -83,7 +83,7 @@
             <a href="tema4.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_4_foto.JPG" alt="tema 4">
+                        <img src="fotos/temax/tema_4_foto.jpg" alt="tema 4">
                     </div>
                     <p>Tema 4</p>
                 </div>
@@ -91,7 +91,7 @@
             <a href="tema5.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/05_tema_foto222.jpg" alt="">
+                        <img src="fotos/temax/tema_5_foto.jpg" alt="">
                     </div>
                     <p>Tema 5</p>
                 </div>
@@ -99,7 +99,7 @@
             <a href="tema6.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_5_foto.JPG" alt="">
+                        <img src="fotos/temax/tema_6_foto.jpg" alt="">
                     </div>
                     <p>Tema 6</p>
                 </div>
@@ -107,7 +107,7 @@
             <a href="ommig.html">
                 <div class="temax">
                     <div class="ramme_og_filter">
-                        <img src="fotos/tema_5_foto.JPG" alt="">
+                        <img src="fotos/temax/ommig_foto.jpg" alt="">
                     </div>
                     <p id="ommig_tekst_mindre">Om mig</p>
                 </div>
