--- a/tema3.html
+++ b/tema3.html
@@ -20,8 +20,8 @@
     <!-- indsæt titel -->
     <title>Tema 3</title>
     <!-- favicon herunder -->
-    <link rel="icon" type="image/x-icon" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <!-- <link rel="icon" type="image/x-icon" sizes="16x16" href="/favicon-16x16.png" /> -->
 </head>
 
 <body>
@@ -95,14 +95,23 @@
         </article>
         <h2 class="loes_pro_overskrift">Løsning</h2>
         <div class="loesning_grid">
-            <div>
-                <div class="foto_erstatning"></div>
-                <div class="knap"><a href="#">Se studiestartsprøve</a></div>
+            <div class="knap_img_div">
+                <a href="#" target="_blank">
+                    <img src="fotos/tema_3/knap_foto3.jpg" alt="">
+                    <div class="knap">
+                        <p>Se prototype</p>
+                    </div>
+                </a>
             </div>
-            <div>
-                <div class="foto_erstatning"></div>
-                <div class="knap"><a href="#">Se emnesite</a></div>
+            <div class="knap_img_div">
+                <a href="#" target="_blank">
+                    <img src="fotos/tema_3/knap_foto33.jpg" alt="">
+                    <div class="knap">
+                        <p> Se pitch slideshow</p>
+                    </div>
+                </a>
             </div>
+
         </div>
 
         <h2 class="loes_pro_overskrift">Proces</h2>
