--- a/tema5.html
+++ b/tema5.html
@@ -44,11 +44,94 @@
     </header>
     <main>
         <h1>Tema 5</h1>
-        <!-- links til løsning -->
-        <div><a href="https://anah0116.github.io/pilotsite/" target="_blank">Se pilotsite</a></div>
-        <div><a href="#" target="_blank">Se pilotsite Github repository </a></div>
-        <div><a href="https://anah0116.github.io/redesign/index.html" target="_blank">Se redesignet</a></div>
-        <div><a href="#" target="_blank">Se redesign temadokumentationen</a></div>
+        <div>
+            <img src="SVG/tema_blomster_svg.svg" alt="">
+        </div>
+
+        <article class="hvid_baggrund">
+
+
+            <div class="tema_tekst_og_border">
+                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <div class="tema_tekst">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                </div>
+            </div>
+
+        </article>
+        <h2 class="loes_pro_overskrift">Løsning</h2>
+        <div class="loesning_grid">
+            <div class="knap_img_div">
+                <a href="https://anah0116.github.io/pilotsite/" target="_blank">
+                    <img src="fotos/tema_5/knap_foto5.jpg" alt="">
+                    <div class="knap">
+                        <p>Se pilotsite</p>
+                    </div>
+                </a>
+            </div>
+            <div>
+                <div class="knap_img_div">
+                    <a href="https://anah0116.github.io/redesign/index.html" target="_blank">
+                        <img src="fotos/tema_5/knap_foto55.jpg" alt="">
+                        <div class="knap">
+                            <p>redesign</p>
+                        </div>
+                    </a>
+
+                </div>
+                <div class="knap_img_div">
+                    <a href="#">
+                        <div class="knap">
+                            <p class="text_align_c"> Se temadokumentationen </p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- '  <div>
+
+                <img src="fotos/tema_5/knap_foto5.jpg" alt="">
+                <div class="knap"><a href="https://anah0116.github.io/pilotsite/" target="_blank">Se pilotsite </a>
+                </div>
+            </div>
+            <div>
+                <img src="fotos/tema_5/knap_foto55.jpg" alt="">
+                <div class="knap"><a href="https://anah0116.github.io/redesign/index.html" target="_blank">Se
+                        redesign</a></div>
+                <div class="knap"><a href="#">Se temadokumentationen</a></div>
+            </div>' -->
+        </div>
+
     </main>
     <footer></footer>
     <script src="javascript.js"></script>
