--- a/tema6.html
+++ b/tema6.html
@@ -44,6 +44,52 @@
     </header>
     <main>
         <h1>Tema 6</h1>
+        <div>
+            <img src="SVG/tema_blomster_svg.svg" alt="">
+        </div>
+
+        <article class="hvid_baggrund">
+
+
+            <div class="tema_tekst_og_border">
+                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <div class="tema_tekst">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                </div>
+            </div>
+
+        </article>
     </main>
     <footer></footer>
     <script src="javascript.js"></script>
