--- a/tema2.html
+++ b/tema2.html
@@ -93,15 +93,21 @@
         </article>
         <h2 class="loes_pro_overskrift">Løsning</h2>
         <div class="loesning_grid">
-            <div>
-                <div class="foto_erstatning"></div>
-                <div class="knap"><a href="http://hita.dk/kea/02_web/01_website/website/index.html" target="_blank">Se
-                        studiestartsprøve</a></div>
+            <div class="knap_img_div">
+                <a href="http://hita.dk/kea/02_web/01_website/website/index.html" target="_blank">
+                    <img src="fotos/tema_2/knap_foto2.jpg" alt="">
+                    <div class="knap">
+                        <p>Se studiestartsprøve</p>
+                    </div>
+                </a>
             </div>
-            <div>
-                <div class="foto_erstatning"></div>
-                <div class="knap"><a href="https://hita.dk/kea/02_web/02_emnesite/emnesite/index.html"
-                        target="_blank">Se emnesite</a></div>
+            <div class="knap_img_div">
+                <a href="https://hita.dk/kea/02_web/02_emnesite/emnesite/index.html" target="_blank">
+                    <img src="fotos/tema_2/knap_foto22.jpg" alt="">
+                    <div class="knap">
+                        <p> Se emnesite</p>
+                    </div>
+                </a>
             </div>
         </div>
 
