--- a/tema4.html
+++ b/tema4.html
@@ -43,10 +43,69 @@
         </nav>
     </header>
     <main>
-
-        <!-- links til løsning -->
-        <div><a href="https://hita.dk/kea/04_animation/website/index.html" target="_blank">Se Javascript spillet</a>
+        <h1>Tema 4</h1>
+        <div>
+            <img src="SVG/tema_blomster_svg.svg" alt="">
         </div>
+
+        <article class="hvid_baggrund">
+
+
+            <div class="tema_tekst_og_border">
+                <h2 class="tema_overskrift">Emnesite og studiestart</h2>
+                <div class="tema_tekst">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus eum nulla mollitia sed,
+                        ex
+                        veniam
+                        ducimus
+                        debitis fuga excepturi ratione aspernatur sequi nemo velit pariatur ad facere, in culpa
+                        facilis.
+                        Lorem
+                        ipsum dolor sit amet consectetur, adipisicing elit. Similique fugit a fugiat accusamus
+                        cum
+                        harum
+                        at
+                        nobis unde, officiis veritatis tempore optio corporis iure in, aut repellat labore
+                        mollitia
+                        rerum.
+                    </p>
+                </div>
+            </div>
+
+        </article>
+        <h2 class="loes_pro_overskrift">Løsning</h2>
+        <div class="loesning_grid">
+            <div class="knap_img_div">
+                <a href="https://hita.dk/kea/04_animation/website/index.html" target="_blank">
+                    <img src="fotos/tema_4/knap_foto4.jpg" alt="">
+
+
+                    <div class="knap">
+                        <p> Se
+                            spil</p>
+                </a>
+            </div>
+        </div>
+        </a>
+        </div>
+
 
     </main>
     <footer></footer>
