--- a/ommig.html
+++ b/ommig.html
@@ -48,6 +48,9 @@
 
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <p>Portfolio af Anahita</p>
+        <p>11.01.2023</p>
+    </footer>
     <script src="javascript.js"></script>
 </body>
