--- a/tema2.html
+++ b/tema2.html
@@ -113,17 +113,23 @@
 
         <h2 class="loes_pro_overskrift">Proces</h2>
         <div class="proces_menu">
-            <a href="#styletile2">Styletyle</a>
-            <a href="#wireframe2">Wireframe</a>
-            <a href="#prototype2">Protoype/mockup</a>
+            <div>
+                <a href="#styletile2">Styletile</a>
+            </div>
+            <div>
+                <a href="#wireframe2">Wireframe</a>
+            </div>
+            <div>
+                <a href="#mockup2">Mockup</a>
+            </div>
         </div>
         <div class="proces_grid">
             <img class="proces_ekstra_pad order2" src="fotos/tema_2/styletile.jpg" alt="Styletile">
-            <div id="styletile2 order1">
+            <div class="order1" id="styletile2">
                 <p><span>Emnesite</span> - Styletile</p>
             </div>
             <img class="order4" src="fotos/tema_2/wireframe_fs.jpg" alt="">
-            <div class="order3" id="wireframe2 ">
+            <div class="order3" id="wireframe2">
                 <p><span>Emnesite</span> - Wireframe til forside</p>
             </div>
             <img class="proces_ekstra_pad order6" src="fotos/tema_2/wireframe_radise.jpg" alt="">
@@ -131,16 +137,19 @@
                 <p><span>Emnesite</span> - Wireframe til radise-side</p>
             </div>
             <img class="order8" src="fotos/tema_2/prototype_fs.jpg" alt="">
-            <div class="order7" id="prototype2">
-                <p><span>Emnesite</span> - Protoype af radise-side</p>
+            <div class="order7" id="mockup2">
+                <p><span>Emnesite</span> - Mockup af forside</p>
             </div>
             <img class="order10" src="fotos/tema_2/prototype_radise.jpg" alt="">
             <div class="order9">
-                <p><span>Emnesite</span> - Prototype af radise-side</p>
+                <p><span>Emnesite</span> - Mockup af radise-side</p>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Portfolio af Anahita</p>
+        <p>11.01.2023</p>
+    </footer>
     <script src="javascript.js"></script>
 </body>
 
