--- a/tema3.html
+++ b/tema3.html
@@ -96,7 +96,7 @@
         <h2 class="loes_pro_overskrift">Løsning</h2>
         <div class="loesning_grid">
             <div class="knap_img_div">
-                <a href="#" target="_blank">
+                <a href="https://xd.adobe.com/view/03cc7315-2cea-4c2d-a2d2-bcd06e576f09-569f/" target="_blank">
                     <img src="fotos/tema_3/knap_foto3.jpg" alt="">
                     <div class="knap">
                         <p>Se prototype</p>
@@ -104,7 +104,8 @@
                 </a>
             </div>
             <div class="knap_img_div">
-                <a href="#" target="_blank">
+                <a href="https://drive.google.com/file/d/1E2a2JFQwnyTSSKiUGTm1acvhw9h0lAR4/view?usp=sharing"
+                    target="_blank">
                     <img src="fotos/tema_3/knap_foto33.jpg" alt="">
                     <div class="knap">
                         <p> Se pitch slideshow</p>
@@ -116,30 +117,26 @@
 
         <h2 class="loes_pro_overskrift">Proces</h2>
         <div class="proces_menu">
-            <a href="#id">Styletyle</a>
-            <a href="#id">Wireframe</a>
-            <a href="#id">Protoype/mockup</a>
+            <a href="#moodboard3">Moodboard</a>
+            <a href="#styletile3">Styletile</a>
+            <a href="#skitse3">Skitse</a>
         </div>
         <div class="proces_grid">
-            <img class="proces_ekstra_pad" src="fotos/tema_2/styletile.jpg" alt="Styletile">
-            <div>
-                <p><span>Emnesite</span> - Styletile</p>
+            <img class="proces_ekstra_pad order2" src="fotos/tema_3/Moodboard.jpg" alt="Moodboard">
+            <div class="order1" id="moodboard3">
+                <p><span>Webshop</span> - moodboard</p>
             </div>
-            <img src="fotos/tema_2/wireframe_fs.jpg" alt="">
-            <div>
-                <p><span>Emnesite</span> - Wireframe til forside</p>
+            <img class="order4" src="fotos/tema_3/Styletile.jpg" alt="Styletile">
+            <div class="order3" id="styletile3">
+                <p><span>Webshop</span> - Styletile</p>
             </div>
-            <img class="proces_ekstra_pad" src="fotos/tema_2/wireframe_radise.jpg" alt="">
-            <div>
-                <p><span>Emnesite</span> - Wireframe til radise-side</p>
+            <img class="proces_ekstra_pad order6" src="fotos/tema_3/skitse_fs.jpg" alt="Skitse">
+            <div class="order5" id="skitse3">
+                <p><span>Webshop</span> - Skitse af forside</p>
             </div>
-            <img src="fotos/tema_2/prototype_fs.jpg" alt="">
-            <div>
-                <p><span>Emnesite</span> - Protoype af radise-side</p>
-            </div>
-            <img src="fotos/tema_2/prototype_radise.jpg" alt="">
-            <div>
-                <p><span>Emnesite</span> - Prototype af radise-side</p>
+            <img class="order8" src="fotos/tema_3/skitse.jpg" alt="Skitse">
+            <div class="order7">
+                <p><span>Webshop</span> - Skitse af shop</p>
             </div>
         </div>
         <!-- <div class="proces_loesning_grid">
@@ -158,8 +155,7 @@
     </main>
     <footer>
         <p>Portfolio af Anahita</p>
-        <p>dato</p>
-        <p>KEA, Multimediedesign - 1. semester</p>
+        <p>11.01.2023</p>
     </footer>
     <script src="javascript.js"></script>
 </body>
