--- a/tema4.html
+++ b/tema4.html
@@ -103,12 +103,38 @@
                 </a>
             </div>
         </div>
-        </a>
         </div>
 
-
+        <h2 class="loes_pro_overskrift">Proces</h2>
+        <div class="proces_menu" id="proces_menu4">
+            <a href="#minmap4">Mindmap</a>
+            <a href="#papir4">Papirsprototype</a>
+            <a href="#ad4">Aktivitetsdiagram</a>
+            <a href="#std4">State Machine Diagram</a>
+        </div>
+        <div class="proces_grid">
+            <img class="proces_ekstra_pad order2" src="fotos/tema_4/mindmap.jpg" alt="Ide skitse">
+            <div class="order1" id="minmap4">
+                <p><span>Spil</span> - Ide mindmap</p>
+            </div>
+            <img class="order4" src="fotos/tema_4/papir.jpg" alt="Styletile">
+            <div class="order3" id="papir4">
+                <p><span>Spil</span> - Papirsprototype</p>
+            </div>
+            <img class="proces_ekstra_pad order6" src="fotos/tema_4/diagram.drawio.png" alt="Skitse">
+            <div class="order5" id="ad4">
+                <p><span>Spil</span> - Aktivitetsdiagram</p>
+            </div>
+            <img class="order8" src="fotos/tema_4/diagram1.drawio.png" alt="Skitse">
+            <div class="order7" id="std4">
+                <p><span>Spil</span> - State Machine Diagram</p>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Portfolio af Anahita</p>
+        <p>11.01.2023</p>
+    </footer>
     <script src="javascript.js"></script>
 </body>
 
