--- a/tema5.html
+++ b/tema5.html
@@ -111,14 +111,49 @@
 
                 </div>
                 <div class="knap_img_div">
-                    <a href="#">
+                    <a href="https://docs.google.com/document/d/1l0yXPZE0daDShYsRWKvInoHKd6gYwlrl/edit?usp=sharing&ouid=100989643902505787872&rtpof=true&sd=true"
+                        target="_blank">
                         <div class="knap">
                             <p class="text_align_c"> Se temadokumentationen </p>
                         </div>
                     </a>
                 </div>
             </div>
-            <!-- '  <div>
+        </div>
+
+        <h2 class="loes_pro_overskrift">Proces</h2>
+        <div class="proces_menu">
+            <a href="#skitse5">Skitse</a>
+            <a href="#styletile5">Styletile</a>
+            <a href="#mockup5">Mockup</a>
+        </div>
+        <div class="proces_grid">
+            <div class="pv_grid order2">
+                <img class="mrg_none" src="fotos/tema_5/1x/pv.jpg" alt="Pilotvideo skitse">
+                <img class="mrg_none" src="fotos/tema_5/1x/pv4.jpg" alt="Pilotvideo skitse">
+                <img src="fotos/tema_5/1x/pv2.jpg" alt="Pilotvideo skitse">
+                <img src="fotos/tema_5/1x/pv3.jpg" alt="Pilotvideo skitse">
+            </div>
+            <div class="order1" id="skitse5">
+                <p><span>Pilotvideo</span> - Udtag af skitser for indstillinger og perspektiv</p>
+            </div>
+            <img class="order4" src="fotos/tema_5/styletile_novamobler.dk.jpg" alt="Styletile">
+            <div class="order3" id="styletile5">
+                <p><span>Redesign</span> - Styletile af eksisterende website</p>
+            </div>
+            <img class="proces_ekstra_pad order6" src="fotos/tema_5/redesign_styletile.jpg" alt="Styletile">
+            <div class="order5">
+                <p><span>Redesign</span> - Styletile af redesign</p>
+            </div>
+            <img class="order8" src="fotos/tema_5/prototype_redesign.jpg" alt="Prototype">
+            <div class="order7" id="mockup5">
+                <p><span>Redesign</span> - Mockup af 'Om os'</p>
+            </div>
+        </div>
+
+
+
+        <!-- '  <div>
 
                 <img src="fotos/tema_5/knap_foto5.jpg" alt="">
                 <div class="knap"><a href="https://anah0116.github.io/pilotsite/" target="_blank">Se pilotsite </a>
@@ -130,10 +165,13 @@
                         redesign</a></div>
                 <div class="knap"><a href="#">Se temadokumentationen</a></div>
             </div>' -->
-        </div>
+
 
     </main>
-    <footer></footer>
+    <footer>
+        <p>Portfolio af Anahita</p>
+        <p>11.01.2023</p>
+    </footer>
     <script src="javascript.js"></script>
 </body>
 
