--- a/tema6.html
+++ b/tema6.html
@@ -91,7 +91,10 @@
 
         </article>
     </main>
-    <footer></footer>
+    <footer>
+        <p>Portfolio af Anahita</p>
+        <p>11.01.2023</p>
+    </footer>
     <script src="javascript.js"></script>
 </body>
 
